refactor: Rename project to Marketing AI
Updates project name and branding assets to "Marketing AI" across package.json, HTML title, metadata, i18n translations, and logo components. This aligns the project with its intended identity and purpose.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AI Marketing Suite | Enterprise GenAI Platform</title>
+    <title>Marketing AI | Enterprise GenAI Platform</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <!-- Space Grotesk for Headings, Inter for Body -->
