--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
               'float': 'float 6s ease-in-out infinite',
               'pulse-glow': 'pulseGlow 4s ease-in-out infinite',
               'tilt': 'tilt 10s infinite linear',
+              'scroll': 'scroll 40s linear infinite',
             },
             keyframes: {
               fadeIn: {
@@ -68,6 +69,10 @@
                 '0%, 50%, 100%': { transform: 'rotate(0deg)' },
                 '25%': { transform: 'rotate(1deg)' },
                 '75%': { transform: 'rotate(-1deg)' },
+              },
+              scroll: {
+                '0%': { transform: 'translateX(0)' },
+                '100%': { transform: 'translateX(-50%)' },
               }
             },
             backgroundImage: {
