--- a/index.html
+++ b/index.html
@@ -152,7 +152,8 @@
         "react/": "https://aistudiocdn.com/react@^19.2.0/",
         "react": "https://aistudiocdn.com/react@^19.2.0",
         "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.9.6",
-        "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0"
+        "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
+        "framer-motion": "https://aistudiocdn.com/framer-motion@^11.0.28"
       }
     }
     </script>
